# nuget-hello-world

./: CMakeLists.txt  README  hello.cpp  packages.config.in
consumer/: CMakeLists.txt  hello.cpp  packages.config.in
producer/: CMakeLists.txt
producer/jsoncpp/: CMakeLists.txt
producer/jsoncpp-1.6.5/: CMakeLists.txt
producer/jsoncpp-1.6.5/jsoncpp-1.6.5/: CMakeLists.txt  CMakePlusPackageInfo.txt  README.md
producer/jsoncpp-1.6.5/jsoncpp-1.6.5/jsoncpp/: CMakeLists.txt
producer/jsoncpp-1.6.5/jsoncpp-1.6.5/src/lib_json/: CMakeLists.txt  json_reader.cpp
producer/jsoncpp-1.9.4/: CMakeLists.txt
producer/zlib/: CMakeLists.txt
producer/zlib/zlib-1.2.11/: CMakeLists.txt
